--- a/public/styles.css
+++ b/public/styles.css
@@ -15,3 +15,16 @@
 article{
     margin: 50px 0px;
 }
+
+#message{
+    height: 100px;
+}
+
+blockquote {
+    border-left: 5px solid #5c6bc0 ;
+}
+
+.collection .collection-item.avatar .title {
+    font-size: 16px;
+    font-weight: bold;
+}
