--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,17 +13,17 @@
         <div class="col s12 l4 offset-l2">
             <h5 class="">Connect : </h5>
             <div class="row">
-                <div class="col s12 l4 ">
+                <div class="col s4 ">
                     <a href="" class="tooltipped btn-floating indigo darken-5" data-tooltip="contact me on instagram">
                         <i class="fab fa-instagram !"></i>
                     </a>
                 </div>
-                <div class="col s12 l4">
+                <div class="col s4">
                     <a href="" class="tooltipped btn-floating indigo darken-5" data-tooltip="contact me on facebook">
                         <i class="fab fa-facebook !"></i>
                     </a>
                 </div>
-                <div class="col s12 l4">
+                <div class="col s4">
                     <a href="" class="tooltipped btn-floating indigo darken-5" data-tooltip="contact me on twitter">
                         <i class="fab fa-twitter !"></i>
                     </a>
