--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -53,6 +53,8 @@
    <!-- comments section -->
    <%- include('./partials/comments') %> 
 
+   
+
    <!-- add comments -->
    <%- include('./partials/commentForm')  %> 
        
@@ -73,6 +75,7 @@
             indicators: true
         });
     });
-</script>  
+</script>
+  <!--costume script  -->
 </body>
 </html>
