--- a/views/partials/commentForm.ejs
+++ b/views/partials/commentForm.ejs
@@ -2,7 +2,7 @@
     <h4 class="center">leave a comment </h4>
     <div class="row">
         <div class="col s12 l8 offset-l2">
-            <form action="/blog/details/<%=blog._id %>" method="POST">
+            <form action="/blog/details/<%=blog._id %>" method="POST" class="comments-form">
                 <div class="input-field">
                     <i class="material-icons prefix">person</i>
                     <input type="text" id="name" name="name" class="">
