added create new blog feature

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -22,6 +22,7 @@
    </aside>
    <section>
        <div class="container">
+        <%- include('./Adminpartials/newBlogTrigger.ejs') %> 
             <h1>All Blogs</h1>
             <!-- post -->
             <div class="row">
@@ -80,6 +81,7 @@
         $('.sidenav').sidenav();
         $('.slider').slider();
         $('.tooltipped').tooltip();
+        $('.modal').modal();
     });
 </script>  
 <!-- costume scripts -->
