--- a/views/partials/commentForm.ejs
+++ b/views/partials/commentForm.ejs
@@ -15,7 +15,7 @@
                 </div>
                 <div class="input-field">
                     <i class="material-icons prefix">message</i>
-                    <textarea name="commentContent" id="comment" class="materialize-textarea"></textarea>
+                    <textarea name="commentContent" id="comment" class="materialize-textarea commentContent"></textarea>
                     <label for="comment">Your message</label>
                 </div>
                 <div class="input-field center">
