set the blog models

--- a/public/styles.css
+++ b/public/styles.css
@@ -62,3 +62,18 @@ blockquote {
     border-radius:  0px 20px 20px 0px ;
     
 }
+
+.bodyBlog{
+    font-size: 18px;
+}
+/* style the first letter */
+.bodyBlog:first-child:first-letter{
+    color: #5c6bc0 ;
+    float: left;
+    font-family: Georgia;
+    font-size: 75px;
+    line-height: 60px;
+    padding-top: 4px;
+    padding-right: 8px;
+    padding-left: 3px;
+}
