--- a/views/admin/Adminpartials/newBlogTrigger.ejs
+++ b/views/admin/Adminpartials/newBlogTrigger.ejs
@@ -6,7 +6,7 @@
   <!-- Modal Structure -->
   <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
-      <h4>Modal Header</h4>
+      <h4>All tools</h4>
       <a href="/admin/createBlog"><i class="material-icons left">add</i> <span>add new Blog </span></a>
     </div>
     <div class="modal-footer">
