--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -42,7 +42,7 @@
           </div>
         </div>
         <div class="post-content ">
-          <p><%= blog.body %> </p>
+          <p class="bodyBlog"><%= blog.body %> </p>
         </div>
         <!-- divider -->
         <div class="divider"></div>
