fixed the controllers issues

--- a/views/blogs/blog.ejs
+++ b/views/blogs/blog.ejs
@@ -15,7 +15,7 @@
 </head>
 <body>
    <header>
-        <%- include ('./partials/header.ejs') %>
+        <%- include ('../partials/header.ejs') %>
    </header>
    <article>
       <div class="container ">
@@ -51,16 +51,16 @@
 
    
    <!-- comments section -->
-   <%- include('./partials/comments') %> 
+   <%- include('../partials/comments') %> 
 
    
 
    <!-- add comments -->
-   <%- include('./partials/commentForm')  %> 
+   <%- include('../partials/commentForm')  %> 
        
 
    <footer class="page-footer grey darken-3">
-        <%- include ('./partials/footer.ejs') %>
+        <%- include ('../partials/footer.ejs') %>
    </footer>
 <!-- jquey -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
