--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -15,15 +15,15 @@
 </head>
 <body>
    <header>
-        <%- include ('./partials/header.ejs') %>
+        <%- include ('../partials/header.ejs') %>
    </header>
    <aside>
-        <%- include('./partials/slider.ejs') %> 
+        <%- include('../partials/slider.ejs') %> 
    </aside>
    <section>
        <div class="container">
             <!-- popup -->
-            <%- include('./partials/popup.ejs') %>
+            <%- include('../partials/popup.ejs') %>
             <h1>All Blogs</h1>
             <!-- post -->
             <div class="row">
@@ -67,7 +67,7 @@
        
 
    <footer class="page-footer grey darken-3">
-        <%- include ('./partials/footer.ejs') %>
+        <%- include ('../partials/footer.ejs') %>
    </footer>
 <!-- jquey -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
