--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!-- navbar -->
 <nav class="nav-wrapper indigo lighten-1">
     <div class="container">
-        <a href="/" class="brand-logo logo"><span>ENSA</span>news</a>
+        <a href="/blog" class="brand-logo logo"><span>ENSA</span>news</a>
         <a href="#" class="sidenav-trigger" data-target="mobile-menu">
             <i class="material-icons">menu</i>
         </a>
