added delete comment feature

--- a/views/admin/admin.ejs
+++ b/views/admin/admin.ejs
@@ -86,6 +86,7 @@
 </script>  
 <!-- costume scripts -->
 <script>
+    //delete blog 
    const trashcan = document.querySelector('a.delete');
    if(trashcan){
     trashcan.addEventListener('click', e => {
