--- a/public/styles.css
+++ b/public/styles.css
@@ -77,3 +77,9 @@ blockquote {
     padding-right: 8px;
     padding-left: 3px;
 }
+
+/* delete comment  */
+.delete-comment{
+    margin-top: 30px;
+    color: red;
+}
