--- a/views/blogs/index.ejs
+++ b/views/blogs/index.ejs
@@ -32,12 +32,12 @@
                         <div class="col s12 l6">
                             <div class="card">
                                 <div class="card-image">
-                                    <img src="<%= blog.img %>" alt="">
+                                    <img src="images/<%= blog.img %>" alt="">
                                     <a href="/blog/details/<%= blog._id%> " class="halfway-fab btn-floating yellow darken-4 pulse">
                                         <i class="fa fa-fire"></i>
                                     </a>
                                 </div>
-                                <div class="card-content">
+                                <div class="card-content blogCardConten">
                                     <span class="card-title"><%= blog.title %></span>
                                     <p><%= blog.snippet %></p>
                                 </div>
